--- a/src/app/components/visual-status/visual-status.component.scss
+++ b/src/app/components/visual-status/visual-status.component.scss
@@ -65,7 +65,7 @@ $top-buffer: 4.8rem;
     }
 }
 
-@media screen and (max-device-width: 640px) {
+@media (max-device-width: 640px) {
   .profile.logo svg {
     margin-top: 9.8rem;
   }
